--- a/ZXClient/App.config
+++ b/ZXClient/App.config
@@ -6,6 +6,7 @@
   <appSettings>
     <add key="version" value="1.3.1" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="prd" value="lylw" />
   </appSettings>
   <log4net>
     <appender name="RollingLogFileAppenderERR" type="log4net.Appender.RollingFileAppender">
