--- a/ZXClient/ZXClient.csproj
+++ b/ZXClient/ZXClient.csproj
@@ -16,7 +16,7 @@
     <NuGetPackageImportStamp>2770e1f9</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Administrator\Documents\zxeval_publish\</PublishUrl>
+    <PublishUrl>D:\src\zxclient\zxeval_publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -26,8 +26,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -122,7 +121,6 @@
     <Compile Include="AlertFrm.Designer.cs">
       <DependentUpon>AlertFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Class1.cs" />
     <Compile Include="control\Catch.cs">
       <SubType>Form</SubType>
     </Compile>
